package Player;

public interface HangManPlayer {
    String chooseWord();
    char giveLetter();
}
